<resources>
    <string name="app_name">POI Vendor</string>

    <string name="tab1">CALLS</string>
    <string name="tab2">CHATS</string>
    <string name="tab3">CONTACTS</string>
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_whatsapp_web">WhatsApp Web</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_without_icon">Without Icon</string>
    <string name="action_with_icon">With Icon</string>
    <string name="action_custom">Custom Tab</string>
    <string name="title_activity_navigation">NavigationActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile number</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Profile Coming Soon</string>
    <string name="already_have_an_acount">Already Have an account?</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>
    <string name="authorization">authentication</string>
    <string name="ok">ok</string>
    <string name="loginDate">login_data</string>
    <string name="loadMember">loadMember</string>
    <string name="no_internet">No Internet Available</string>
    <string name="search">Search</string>
    <string name="resend">RESEND</string>
    <string name="dint_rceived_otp">Didn\'t Recieve the OTP?</string>
    <string name="update">Update</string>
    <string name="title_activity_edit_location">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="getProfile">getProfile</string>
    <string name="logout">Logout</string>
    <string name="message_contain">Download POI application for Contact sharing with locations. https://drive.google.com/file/d/1vpRCK_2sVrmvI4YbImlpZ8-Cvni_3QXa/view?usp=sharing</string>
    <string name="family">Add as Family</string>
    <string name="friend">Add as Friends</string>
    <string name="office">Add as Office</string>
    <string name="loginDateImage">loginDataImage</string>
    <string name="vendor_sign_up">Vendor Sign up</string>
    <string name="vender_sign_in_to_continue">Vender Sign in to continue</string>

</resources>
