<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="ivyphlox.com.poi.activity.LoginActivity">
    <ImageView
        android:id="@+id/ivPOI"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/smartphone"
        />
    <TextView
        android:id="@+id/tvSigninContinue"
        android:layout_below="@+id/ivPOI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Enter OTP"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/large_text_title"/>
    <TextView
        android:id="@+id/tvForgetDiscrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSigninContinue"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="We have sent you access code via SMS for mobile number verification"
        />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_below="@+id/tvForgetDiscrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margine"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:backgroundTint="@color/colorTextPrimary"
                android:hint="Enter OTP"/>

        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:visibility="invisible"
            android:gravity="right"/>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardElevation="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="20dp">
            <TextView
                android:id="@+id/tvSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:textColor="@color/colorBottomWhite"
                android:textStyle="bold"
                android:text="@string/submit"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_below="@+id/llLogin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/sign_up"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dint_rceived_otp"/>

        <TextView
            android:id="@+id/tvResnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/resend"/>
    </LinearLayout>

</RelativeLayout>