<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorBottomWhite"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context="ivyphlox.com.poi.activity.LoginActivity">

    <ImageView
        android:id="@+id/ivPOI"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:layout_above="@+id/tvSigninContinue"
        android:src="@drawable/ic_poi" />

    <TextView
        android:id="@+id/tvSigninContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/vender_sign_in_to_continue"
        android:layout_above="@+id/llLogin"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/large_text_title"/>
    
    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margine"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtMobCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorTextPrimary"
                    android:inputType="phone"
                    android:text="+971"
                    android:hint="Code"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout1"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorTextPrimary"
                    android:inputType="phone"
                    android:hint="Mobile Number"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorTextPrimary"
                android:inputType="textPassword"
                android:hint="Password"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:gravity="right"/>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardElevation="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="20dp">
            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:textColor="@color/colorBottomWhite"
                android:textStyle="bold"
                android:text="@string/sign_in"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_map"
        android:layout_below="@+id/llLogin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textSize="@dimen/nor_text_title"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/large_text"
            android:layout_marginLeft="@dimen/V5dip"
            android:text="@string/sign_up"/>
    </LinearLayout>

</RelativeLayout>